# mosaicmind-rag

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  cloudrun-service.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy-hf-space.yml
airflow/dags/: eval_sweep_dag.py  reindex_dag.py
data/eval/: eval_set.example.json
scripts/: cli_query.py  deploy_cloudrun.sh  deploy_hf_space.sh  eval_cases.json  run_eval.py  seed_data.py  smoke_e2e.py
src/mosaicmind/: __init__.py  config.py
src/mosaicmind/agents/: __init__.py  graph.py  prompts.py  tools.py
src/mosaicmind/api/: main.py  schemas.py
src/mosaicmind/api/routes/: corpus.py  eval.py  health.py  ingest.py  query.py
src/mosaicmind/api/static/: index.html
src/mosaicmind/indexing/: __init__.py  store.py
src/mosaicmind/ingestion/: __init__.py  audio.py  base.py  image.py  pdf.py  router.py  video.py
src/mosaicmind/llm/: __init__.py  gemini.py  groq.py
src/mosaicmind/mlops/: __init__.py  eval.py  tracking.py
src/mosaicmind/utils/: ids.py  logging.py
tests/: conftest.py  test_agent_offline.py  test_api_health.py  test_imports.py  test_router.py
